// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tracklist render when disabled renders the as expected 1`] = `
<List
  relaxed={true}
>
  <ListItem
    className="current-track"
    key="0-spotify:track:1yzSSn5Sj1azuo7RgwvDb3"
  >
    <Image
      as="img"
      className="current-image"
      inline={true}
      size="tiny"
      src="album-image.jpg"
      ui={true}
    />
    <ListContent
      className=""
    >
      <ListHeader
        as="h4"
      >
        No Time for Caution
      </ListHeader>
      <ListDescription>
        Hans Zimmer
         
        <small>
          (
          4:06
          )
        </small>
      </ListDescription>
      <AddedBy
        users={
          Array [
            Object {
              "_id": "123",
              "addedAt": "2019-12-17T13:11:37.316Z",
              "fullname": "Big Rainbowhead",
            },
          ]
        }
      />
    </ListContent>
  </ListItem>
  <ListItem
    className=""
    key="1-local:track:Soundtracks/Silent%20Running%20OST/Silent%20Running%20"
  >
    <Image
      as="img"
      inline={true}
      size="tiny"
      src="default-artwork.png"
      ui={true}
    />
    <ListContent
      className=""
    >
      <ListHeader
        as="h4"
      >
        Silent Running
      </ListHeader>
      <ListDescription>
        Joan Baez
         
        <small>
          (
          2:04
          )
        </small>
      </ListDescription>
      <AddedBy />
    </ListContent>
  </ListItem>
</List>
`;

exports[`Tracklist render when enabled renders the as expected 1`] = `
<List
  relaxed={true}
>
  <ListItem
    className="current-track"
    key="0-spotify:track:1yzSSn5Sj1azuo7RgwvDb3"
  >
    <Image
      as="img"
      className="current-image"
      inline={true}
      size="tiny"
      src="album-image.jpg"
      ui={true}
    />
    <ListContent
      className=""
    >
      <ListHeader
        as="h4"
      >
        No Time for Caution
      </ListHeader>
      <ListDescription>
        Hans Zimmer
         
        <small>
          (
          4:06
          )
        </small>
      </ListDescription>
      <AddedBy
        users={
          Array [
            Object {
              "_id": "123",
              "addedAt": "2019-12-17T13:11:37.316Z",
              "fullname": "Big Rainbowhead",
            },
          ]
        }
      />
    </ListContent>
  </ListItem>
  <ListItem
    className=""
    key="1-local:track:Soundtracks/Silent%20Running%20OST/Silent%20Running%20"
  >
    <Image
      as="img"
      className="remove-image"
      inline={true}
      onClick={[Function]}
      size="tiny"
      src="default-artwork.png"
      title="Click to remove from playlist"
      ui={true}
    />
    <ListContent
      className=""
    >
      <ListHeader
        as="h4"
      >
        Silent Running
      </ListHeader>
      <ListDescription>
        Joan Baez
         
        <small>
          (
          2:04
          )
        </small>
      </ListDescription>
      <AddedBy />
    </ListContent>
  </ListItem>
</List>
`;

exports[`Tracklist tracklist but nothing cued up does not mark anything as current 1`] = `
<List
  relaxed={true}
>
  <ListItem
    className=""
    key="0-spotify:track:1yzSSn5Sj1azuo7RgwvDb3"
  >
    <Image
      as="img"
      className="remove-image"
      inline={true}
      onClick={[Function]}
      size="mini"
      src="default-artwork.png"
      title="Click to remove from playlist"
      ui={true}
    />
    <ListContent
      className="track-info"
    >
      <ListHeader
        as="h4"
      >
        No Time for Caution
      </ListHeader>
      <ListDescription>
        Hans Zimmer
         
        <small>
          (
          4:06
          )
        </small>
      </ListDescription>
      <AddedBy
        users={
          Array [
            Object {
              "_id": "123",
              "addedAt": "2019-12-17T13:11:37.316Z",
              "fullname": "Big Rainbowhead",
            },
          ]
        }
      />
    </ListContent>
  </ListItem>
  <ListItem
    className=""
    key="1-local:track:Soundtracks/Silent%20Running%20OST/Silent%20Running%20"
  >
    <Image
      as="img"
      className="remove-image"
      inline={true}
      onClick={[Function]}
      size="mini"
      src="default-artwork.png"
      title="Click to remove from playlist"
      ui={true}
    />
    <ListContent
      className="track-info"
    >
      <ListHeader
        as="h4"
      >
        Silent Running
      </ListHeader>
      <ListDescription>
        Joan Baez
         
        <small>
          (
          2:04
          )
        </small>
      </ListDescription>
      <AddedBy />
    </ListContent>
  </ListItem>
</List>
`;
